--- a/templates/student_home.html
+++ b/templates/student_home.html
@@ -28,5 +28,13 @@
 
         </tr>
     </table>
+
+    <div>
+        <p>请输入想学习的先修课</p>
+        <input id="course_id" type="text">
+        <button onclick="query()"></button>
+        <p id="hint"></p>
+        <p id="class_qualified"></p>
+    </div>
 </body>
 </html>
