--- a/templates/student_home.html
+++ b/templates/student_home.html
@@ -32,7 +32,7 @@
     <div>
         <p>请输入想学习的先修课</p>
         <input id="course_id" type="text">
-        <button onclick="query()"></button>
+        <button onclick="query()">查询</button>
         <p id="hint"></p>
         <p id="class_qualified"></p>
     </div>
