--- a/templates/admin_home.html
+++ b/templates/admin_home.html
@@ -55,9 +55,9 @@
 <h1 style="margin-bottom: 0">欢迎来到魔法部教育局霍格沃茨办公室</h1>
 </div>
 
-    <div id="menu" style="background-color: gold;height: 100%;width: 100px;float: left">
+    <div id="menu" style="background-color: gold;height: 400px;width: 100px;float: left">
         <ul>
-            <li><a class="active" href="#add_student">添加学生</a></li>
+            <li><a class="active" href="#add_student" target="iframe_a">添加学生</a></li>
             <li><a href="#add_course">添加课程</a></li>
             <li><a href="#add_teacher">添加老师</a></li>
             <li><a href="#quote_course">查询课程</a></li>
@@ -65,18 +65,15 @@
 
     </div>
 
-    <div id="content" style="background-color: azure;height: 100%;width:400px;left:100px;float: left">
-<!--        <a id="add_student">添加学生</a><br>-->
-<!--        <a id="add_course">添加课程</a><br>-->
-<!--        <a id="add_teacher">添加老师</a><br>-->
-<!--        <a id="quote_course">查询课程</a><br>-->
-        添加学生
-        添加课程
-        添加老师
-        查询课程
+    <div id="content" style="background-color: azure;height: 400px;width:400px;float: left">
+        <iframe src="admin_home.html" name="iframe_a" frameborder="0"></iframe>
+        <iframe id="add_student" src="admin_add_student.html" frameborder="0"></iframe>
+        <iframe id="add_course" src="admin_add_course.html" frameborder="0"></iframe>
+        <iframe id="add_teacher" src="admin_add_teacher.html" frameborder="0"></iframe>
+        <iframe id="quote_course" src="admin_quote_course.html" frameborder="0"></iframe>
     </div>
 
-    <div id="footer" style="background-color: #aaffb6;clear: both;text-align: center">
+    <div id="footer" style="background-color: #aaffb6;clear: both;float: bottom;text-align: center">
         版权归膜法部所有 圈R
     </div>
 
