--- a/templates/admin_home.html
+++ b/templates/admin_home.html
@@ -57,7 +57,7 @@
 
     <div id="menu" style="background-color: gold;height: 400px;width: 100px;float: left">
         <ul>
-            <li><a class="active" href="#add_student" target="iframe_a">添加学生</a></li>
+            <li><a class="active" href="admin_add_student.html" target="iframe_a">添加学生</a></li>
             <li><a href="#add_course">添加课程</a></li>
             <li><a href="#add_teacher">添加老师</a></li>
             <li><a href="#quote_course">查询课程</a></li>
@@ -65,8 +65,8 @@
 
     </div>
 
-    <div id="content" style="background-color: azure;height: 400px;width:400px;float: left">
-        <iframe src="admin_home.html" name="iframe_a" frameborder="0"></iframe>
+    <div id="content" style="background-color: azure;height: 400px;width:900px;float: left">
+        <iframe src="" name="iframe_a" frameborder="0" width="900px" height="400px"></iframe>
         <iframe id="add_student" src="admin_add_student.html" frameborder="0"></iframe>
         <iframe id="add_course" src="admin_add_course.html" frameborder="0"></iframe>
         <iframe id="add_teacher" src="admin_add_teacher.html" frameborder="0"></iframe>
