--- a/templates/student_home.html
+++ b/templates/student_home.html
@@ -34,7 +34,9 @@
         <input id="course_id" type="text">
         <button onclick="query()">查询</button>
         <p id="hint"></p>
+        <p id="pres"></p>
         <p id="class_qualified"></p>
+        <p id="result"></p>
     </div>
 </body>
 </html>
