--- a/templates/admin_home.html
+++ b/templates/admin_home.html
@@ -58,23 +58,19 @@
     <div id="menu" style="background-color: gold;height: 400px;width: 100px;float: left">
         <ul>
             <li><a class="active" href="admin_add_student.html" target="iframe_a">添加学生</a></li>
-            <li><a href="#add_course">添加课程</a></li>
-            <li><a href="#add_teacher">添加老师</a></li>
-            <li><a href="#quote_course">查询课程</a></li>
+            <li><a href="admin_add_course.html" target="iframe_a">添加课程</a></li>
+            <li><a href="admin_add_teacher.html" target="iframe_a">添加老师</a></li>
+            <li><a href="admin_quote_course.html" target="iframe_a">查询课程</a></li>
         </ul>
 
     </div>
 
     <div id="content" style="background-color: azure;height: 400px;width:900px;float: left">
-        <iframe src="" name="iframe_a" frameborder="0" width="900px" height="400px"></iframe>
-        <iframe id="add_student" src="admin_add_student.html" frameborder="0"></iframe>
-        <iframe id="add_course" src="admin_add_course.html" frameborder="0"></iframe>
-        <iframe id="add_teacher" src="admin_add_teacher.html" frameborder="0"></iframe>
-        <iframe id="quote_course" src="admin_quote_course.html" frameborder="0"></iframe>
+        <iframe src="admin_add_student.html" name="iframe_a" frameborder="0" width="900px" height="400px"></iframe>
     </div>
 
     <div id="footer" style="background-color: #aaffb6;clear: both;float: bottom;text-align: center">
-        版权归膜法部所有 圈R
+        版权归谦虚膜法部所有 圈R
     </div>
 
 
