--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -23,7 +23,7 @@
             hint.innerHTML="你是麻瓜!";
         }else{
             hint.innerText="正准备飞天扫帚...";
-            window.open("admin_home","魔法部门办公室","",false);
+            window.open("admin_home.html","魔法部门办公室","",false);
 
         }
     }
