--- a/templates/admin_add_student.html
+++ b/templates/admin_add_student.html
@@ -7,10 +7,10 @@
     <script src="{{url_for('static',filename='Utils.js')}}"></script>
     <script>
         function onSubmit() {
-            var name=document.getElementById("name");
-            var sid=document.getElementById("sid");
-            var college=document.getElementById("college");
-            var pres=document.getElementById("pres");
+            var name=document.getElementById("name").value;
+            var sid=document.getElementById("sid").value;
+            var college=document.getElementById("college").value;
+            var pres=document.getElementById("pres").value;
             var gender=document.forms['check']['gender'].value;
             console.log('start submit'+name+sid+college+pres+gender);
             if(name==""||sid==""||college==""||pres==""||gender==""){
@@ -31,6 +31,7 @@
                         'gender':gender
                     },
                     success:function (data,textStatus) {
+                        console.log(data)
                         document.getElementById('hint').innerText=data.status;
                     }
                 }
@@ -41,23 +42,24 @@
 <body>
 <p><b>添加学生</b></p>
 
-<form name="check" onsubmit="onSubmit()">
+
 
     <p>姓名:</p>
     <input type="text" id="name" required><br>
     <p>学号:</p>
     <input type="text" id="sid" required><br>
+<form name="check">
     <p>性别:</p>
     <input type="radio" name="gender" value="F" required>女<br>
     <input type="radio" name="gender" value="M" required>男<br>
     <input type="radio" name="gender" value="M" required>兽人<br>
+</form>
     <p>书院:</p>
     <input type="text" id="college" required><br>
     <p>修过的课(用,隔开):</p>
     <input type="text" id="pres"><br>
-    <input type="submit">添加
-<!--    <button onclick="onSubmit()">添加</button>-->
-</form>
+    <button onclick="onSubmit()">添加</button>
+
 <p id="hint"></p>
 
 </body>
