--- a/templates/admin_add_student.html
+++ b/templates/admin_add_student.html
@@ -44,9 +44,9 @@
 
 
 
-    <p>姓名:</p>
+    姓名:
     <input type="text" id="name" required><br>
-    <p>学号:</p>
+    学号:
     <input type="text" id="sid" required><br>
 <form name="check">
     <p>性别:</p>
@@ -54,9 +54,9 @@
     <input type="radio" name="gender" value="M" required>男<br>
     <input type="radio" name="gender" value="M" required>兽人<br>
 </form>
-    <p>书院:</p>
+    书院:
     <input type="text" id="college" required><br>
-    <p>修过的课(用,隔开):</p>
+    修过的课(用,隔开):
     <input type="text" id="pres"><br>
     <button onclick="onSubmit()">添加</button>
 
