--- a/templates/admin_home.html
+++ b/templates/admin_home.html
@@ -57,10 +57,10 @@
 
     <div id="menu" style="background-color: gold;height: 400px;width: 100px;float: left">
         <ul>
-            <li><a class="active" href="admin_add_student.html" target="iframe_a">添加学生</a></li>
-            <li><a href="admin_add_course.html" target="iframe_a">添加课程</a></li>
-            <li><a href="admin_add_teacher.html" target="iframe_a">添加老师</a></li>
-            <li><a href="admin_quote_course.html" target="iframe_a">查询课程</a></li>
+            <li><a id="add_student" onclick="changeTab(0)" class="active" href="admin_add_student.html" target="iframe_a">添加学生</a></li>
+            <li><a id="add_course" onclick="changeTab(1)" class="active" href="admin_add_course.html" target="iframe_a">添加课程</a></li>
+            <li><a id="add_teacher" onclick="changeTab(2)" class="active" href="admin_add_teacher.html" target="iframe_a">添加老师</a></li>
+            <li><a id="quote_course" onclick="changeTab(3)" class="active" href="admin_quote_course.html" target="iframe_a">查询课程</a></li>
         </ul>
 
     </div>
