--- a/templates/admin_quote_course.html
+++ b/templates/admin_quote_course.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="{{url_for('static',filename='Utils.js')}}"></script>
     <title>查找课程</title>
 </head>
 <body>
-<p>查找课程</p>
+<p><b>查找课程</b></p>
 </body>
 </html>
