--- a/templates/admin_home.html
+++ b/templates/admin_home.html
@@ -28,22 +28,19 @@
         }
 
         li a:hover:not(.active){
-            background-color: aqua;
-            color: black;
+            /*background-color: aqua;*/
+            /*color: black;*/
+            animation-name: tab_anim1;
+            animation-duration: 0.5s;
         }
+        @keyframes tab_anim1 {
+            0%{
 
-        button.btn{
-            text-align: center;
-            display: block;
-            font-weight: bold;
-            color: black;
-            background-color: #aaffb6;
-            width: 100px;
-            padding: 0;
-            text-transform: uppercase;
-            margin: 0;
-
-
+            }
+            100%{
+                background-color: aqua;
+                color: black;
+            }
         }
     </style>
 </head>
@@ -58,9 +55,9 @@
     <div id="menu" style="background-color: gold;height: 400px;width: 100px;float: left">
         <ul>
             <li><a id="add_student" onclick="changeTab(0)" class="active" href="admin_add_student.html" target="iframe_a">添加学生</a></li>
-            <li><a id="add_course" onclick="changeTab(1)" class="active" href="admin_add_course.html" target="iframe_a">添加课程</a></li>
-            <li><a id="add_teacher" onclick="changeTab(2)" class="active" href="admin_add_teacher.html" target="iframe_a">添加老师</a></li>
-            <li><a id="quote_course" onclick="changeTab(3)" class="active" href="admin_quote_course.html" target="iframe_a">查询课程</a></li>
+            <li><a id="add_course" onclick="changeTab(1)" class="" href="admin_add_course.html" target="iframe_a">添加课程</a></li>
+            <li><a id="add_teacher" onclick="changeTab(2)" class="" href="admin_add_teacher.html" target="iframe_a">添加老师</a></li>
+            <li><a id="quote_course" onclick="changeTab(3)" class="" href="admin_quote_course.html" target="iframe_a">查询课程</a></li>
         </ul>
 
     </div>
