--- a/templates/admin_quote_course.html
+++ b/templates/admin_quote_course.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="{{url_for('static',filename='Utils.js')}}"></script>
+    <script>
+        function doQuery() {
+            var course_id=document.getElementById('course_id');
+            $.ajax(
+                {
+                    url:Utils.server+"admin_query_course",
+                    type: 'get',
+                    dataType: 'jsonp',
+                    jsonpCallback: 'admin_query_course',
+                    data: {
+                        'course_id':course_id,
+                    },
+                    success:function (data,textStatus) {
+                        console.log(data)
+                        document.getElementById('hint').innerText=data.status;
+                    }
+                }
+            )
+        }
+    </script>
     <title>查找课程</title>
 </head>
 <body>
 <p><b>查找课程</b></p>
+查找课程:<input id="course_id" type="text">
+<button onclick=""></button>
 </body>
 </html>
